--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://quietonset.github.io/registration-form",
+  "homepage": "https://estherchinda.github.io/registration-form",
   "name": "form",
   "version": "0.0.0",
   "private": true,
